[tool.poetry]
name = "fast-api-poetry"
version = "0.1.0"
description = ""
authors = ["maximmaximov <treemka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

